--- a/serviceProviderV2/nbproject/private/private.properties
+++ b/serviceProviderV2/nbproject/private/private.properties
@@ -1,5 +1,5 @@
-deploy.ant.properties.file=C:\\Users\\Joshua\\AppData\\Roaming\\NetBeans\\8.2\\tomcat80.properties
-j2ee.server.home=C:/Users/Joshua/Downloads/apache-tomcat-8.5.31
-j2ee.server.instance=tomcat80:home=C:\\Users\\Joshua\\Downloads\\apache-tomcat-8.5.31
+deploy.ant.properties.file=C:\\Users\\Carl\\AppData\\Roaming\\NetBeans\\8.2\\tomcat80.properties
+j2ee.server.home=C:/Users/Carl/Desktop/lab/apache-tomcat-8.5.31
+j2ee.server.instance=tomcat80:home=C:\\Users\\Carl\\Desktop\\lab\\apache-tomcat-8.5.31
 selected.browser=Chrome
-user.properties.file=C:\\Users\\Joshua\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\Carl\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
